# newwproject

./: CMakeLists.txt  README.md  logging.cpp  logging.h  project.cpp
abc/: hello.cpp  loggerobj.cpp  logs.txt  main.cpp  project.cpp  user.cpp
abc/logs/: basic-log.txt  rotating-log.txt
